# lpcvt

./: CMakeLists.txt  INSTALL_WIN.txt  Makefile  RunTests  TestLPCVT.h  TestRunner.cpp  cube_mesh_original_lpcvt_output  lpcvt_functions.cpp  lpcvt_functions.h  main.cpp  main.h  original_output_for_cube_mesh  readme.txt
algebra/: F_Lp.cpp  F_Lp.h  integration_simplex.h  measure.h  three_planes_intersection.h  voro_func.h
combinatorics/: RVD.h  clipped_VD.h  delaunay.cpp  delaunay.h  delaunay_CGAL.cpp  delaunay_CGAL.h  delaunay_skel.h  mesh.cpp  mesh.h  openvdb_includes.h  symbolic_vertex.h  voronoi_cell.h
combinatorics/exact/: RVD_predicates.cpp  RVD_predicates.h
common/: containers.h  line_stream.h  matrix.h  plane.h  processor.cpp  processor.h  types.h  vecg.h
data/: 100verts_test_mesh.pts  three_holes.pts
